# swades-voice-agent-repo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  agent.py  db.py  pyproject.toml  server.py  tools.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/token/: route.ts
frontend/app/appointments/: page.tsx
frontend/app/monitor/: page.tsx
frontend/components/: AgentStatePanel.tsx  LiveTranscript.tsx  TakeOverButton.tsx
