[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.1",
    "livekit>=1.1.12",
    "livekit-agents[deepgram,elevenlabs,openai,silero]>=1.6.4",
    "python-dotenv>=1.2.2",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
